--- a/Plugins/Nop.Plugin.Misc.NopStationTeams/Nop.Plugin.Misc.NopStationTeams.csproj
+++ b/Plugins/Nop.Plugin.Misc.NopStationTeams/Nop.Plugin.Misc.NopStationTeams.csproj
@@ -56,6 +56,9 @@
     <Compile Update="Controllers\NopStationTeamsController.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
+    <Compile Update="NopStationTeamsPlugin.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
 </Project>
