--- a/Plugins/Nop.Plugin.Misc.NopStation/Nop.Plugin.Misc.NopStation.csproj
+++ b/Plugins/Nop.Plugin.Misc.NopStation/Nop.Plugin.Misc.NopStation.csproj
@@ -84,13 +84,12 @@
     <None Update="Views\Default.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Views\DeveloperList.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Views\_ViewImports.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\" />
   </ItemGroup>
 
 </Project>
