Conditionally display in category home page

--- a/Plugins/Nop.Plugin.Misc.NopStation/Nop.Plugin.Misc.NopStation.csproj
+++ b/Plugins/Nop.Plugin.Misc.NopStation/Nop.Plugin.Misc.NopStation.csproj
@@ -81,6 +81,9 @@
     <None Update="Areas\Admin\Views\_ViewImports.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Content\style.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Views\Default.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
