Marchant get charce according to the paymentType

--- a/Plugins/Nop.Plugin.Misc.NopStation/Nop.Plugin.Misc.NopStation.csproj
+++ b/Plugins/Nop.Plugin.Misc.NopStation/Nop.Plugin.Misc.NopStation.csproj
@@ -20,14 +20,10 @@
 	</PropertyGroup>
 
   <ItemGroup>
-    <None Remove="logo.png" />
     <None Remove="plugin.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="logo.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="plugin.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -82,6 +78,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Content\style.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="logo.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Views\Default.cshtml">
