--- a/Plugins/Nop.Plugin.Widgets.Parvez/Nop.Plugin.Widgets.Parvez.csproj
+++ b/Plugins/Nop.Plugin.Widgets.Parvez/Nop.Plugin.Widgets.Parvez.csproj
@@ -36,6 +36,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Libraries\Nop.Services\Nop.Services.csproj" />
 	  <ProjectReference Include="..\..\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
+	  <ProjectReference Include="..\Nop.Plugin.Misc.NopStationTeam\Nop.Plugin.Misc.NopStationTeam.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
